--- a/01.documentation/01-kafka-basics.html
+++ b/01.documentation/01-kafka-basics.html
@@ -137,7 +137,7 @@
         </head>
         <body class="vscode-body vscode-light">
             <h1 id="introdution-to-kafka">Introdution to Kafka</h1>
-<h2 id="01-introduction-to-kafka-in-progress">01. Introduction to kafka [<em><strong>in progress</strong></em>]</h2>
+<h2 id="01-introduction-to-kafka">01. Introduction to kafka</h2>
 <ul>
 <li>
 <p><strong><ins>About / Introduction</ins></strong></p>
@@ -514,7 +514,7 @@
 </li>
 </ul>
 <hr>
-<h2 id="xx-kafka---consumer-groups">XX. Kafka - Consumer groups</h2>
+<h2 id="4-kafka---consumer-groups">4. Kafka - Consumer groups</h2>
 <ul>
 <li><strong><ins>About / Introduction</ins></strong>
 <ul>
@@ -578,6 +578,199 @@
 <li><strong><ins>References:</ins></strong>
 <ul>
 <li><a href="https://www.javatpoint.com/apache-kafka-consumer-and-consumer-groups">https://www.javatpoint.com/apache-kafka-consumer-and-consumer-groups</a></li>
+</ul>
+</li>
+</ul>
+<hr>
+<h2 id="5-kafka-brokers--topics-in-progress">5. Kafka Brokers &amp; Topics [<em><strong>In progress</strong></em>]</h2>
+<ul>
+<li><strong><ins>About / Introduction</ins></strong>
+<ul>
+<li><strong>Broker:</strong>
+<ul>
+<li>Also know as <em><strong>Bootstrap Server</strong></em>, the Kafka broker can be defined as one of the core components of the Kafka architecture aka the Kafka server and a Kafka node. We define a Kafka cluster when there is more than one broker (servers) present.</li>
+<li>Each broker in the cluster has its own <em><strong>unique number ID (integer)</strong></em>.</li>
+<li>The Kafka broker is responsible for transferring the conversation that the publisher is pushing in the Kafka log commit and the subscriber shall be consuming these messages.
+<ul>
+<li>It has also been seen that an individual broker can handle thousands of requests for reads and writes per second. When no performance impact is seen then every broker in the Kafka cluster can handle terabytes of messages.</li>
+<li>Also, the Kafka producers push a message to a broker, then the broker receives the data record and stores it. This stored data remains over the disk defined by a distinct offset. However, the partition, topic, and offset of a broker allow consumers to fetch messages.</li>
+</ul>
+</li>
+<li>While the Kafka cluster consists of various brokers. Kafka cluster implements the Zookeeper for maintaining the state of the cluster. ZooKeeper also performs the broker leader election.</li>
+<li>Kafka Broker is structured as a KafkaServer, that is hosting various topics. The stated topics must be partitioned across the various brokers spread in a Kafka cluster.
+<ul>
+<li>The single broker is hosting the topic partitions for more than one topic, while a topic is partitioned for a single partition.</li>
+</ul>
+</li>
+<li>Some big clusters can have over 100 brokers.</li>
+</ul>
+</li>
+<li><strong>Topics:</strong>
+<ul>
+<li>A topic is a logical channel or category to which messages (or records) are published. Producers send data to topics, and consumers subscribe to topics to consume the data. Topics allow Kafka to organize and manage streams of data in a structured way.
+<ul>
+<li><strong>Terms:</strong>
+<ul>
+<li><strong>Data Streams:</strong>
+<ul>
+<li>A topic represents a stream of records (messages), and these records are ordered within the topic.</li>
+</ul>
+</li>
+<li><strong>Partitions:</strong>
+<ul>
+<li>Each topic can be split into multiple partitions, which allow Kafka to scale horizontally. Each partition is an ordered log of records, and data within a partition is stored in a sequence. Partitions enable parallelism in Kafka, as producers can write to different partitions and consumers can read from them independently.</li>
+</ul>
+</li>
+<li><strong>Producers and Consumers:</strong>
+<ul>
+<li><strong>Producers</strong> write data to topics. They can specify the topic name when sending a message.</li>
+<li><strong>Consumers</strong> subscribe to topics to receive data. They can consume messages from one or more partitions of a topic.</li>
+</ul>
+</li>
+<li><strong>Log-based Storage:</strong>
+<ul>
+<li>Topics are stored as logs, meaning records are kept for a specific retention period or until the storage limit is reached, allowing consumers to read messages at any time within the retention window.</li>
+</ul>
+</li>
+<li><strong>Durability:</strong>
+<ul>
+<li>Kafka topics are fault-tolerant. Messages are replicated across multiple brokers in the cluster, which ensures that data is available even in the event of node failures.</li>
+</ul>
+</li>
+<li><strong>Scaling:</strong>
+<ul>
+<li>Topics can scale based on the number of partitions. More partitions allow higher throughput and parallel consumption but may introduce complexity in managing the partitions and maintaining order across them.</li>
+</ul>
+</li>
+<li><strong>Topic Naming:</strong>
+<ul>
+<li>Topics are identified by unique names. Producers and consumers need to know the topic name to send and consume messages, respectively.</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+</li>
+<li><strong>Kafaka Broker Discovery:</strong>
+<ul>
+<li>Refers to the process by which Kafka clients (producers, consumers, or other services) discover and connect to the available Kafka brokers in a Kafka cluster.</li>
+<li>Here's how Kafka broker discovery works:
+<ul>
+<li><strong>Initial Connection to the Cluster:</strong>
+<ul>
+<li>When a Kafka client starts, it needs to connect to at least one broker in the cluster to get information about the rest of the brokers in the cluster.</li>
+<li>The client is typically provided with a list of initial brokers (a small set of brokers), which can be hardcoded in the configuration or passed dynamically. These brokers can be any brokers that are part of the Kafka cluster.</li>
+</ul>
+</li>
+<li><strong>Metadata Fetch:</strong>
+<ul>
+<li>After the client connects to one of the initial brokers, it requests metadata information from that broker.
+<ul>
+<li><em>The metadata includes:</em></li>
+<li>A list of all available brokers in the cluster.</li>
+<li>The topics and partitions each broker is responsible for.</li>
+<li>Which broker is the leader for each partition (i.e., the broker that is actively accepting writes for that partition).</li>
+</ul>
+</li>
+</ul>
+</li>
+<li><strong>Updating Broker List:</strong>
+<ul>
+<li>Once the client receives the metadata information, it can update its internal list of brokers and cache that information.</li>
+<li>If a broker fails or new brokers are added, the client can periodically refresh the metadata to stay up-to-date with the cluster's state.</li>
+</ul>
+</li>
+<li><strong>Handling Failures:</strong>
+<ul>
+<li>If the initial broker provided becomes unreachable or fails, the client can use the updated broker list to attempt connections to other brokers in the cluster.</li>
+<li>Kafka clients usually implement automatic failover by retrying connections to other brokers or automatically updating their metadata when necessary.</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+<blockquote>
+<p><strong>Note:</strong> After connecting to any Broker (called a bootstrap broker), client receives a metadata with list of all brokers and then it will be able to connected to the entire cluster/broker (Kaka clients hae smart mechanism for that)</p>
+</blockquote>
+<ul>
+<li><strong><ins>References:</ins></strong>
+<ul>
+<li><a href="ChatGPT">ChatGPT</a></li>
+</ul>
+</li>
+</ul>
+<hr>
+<h2 id="6-kafka-topic-replication-factors">6. Kafka Topic Replication Factors</h2>
+<ul>
+<li><strong><ins>About / Introduction</ins></strong>
+<ul>
+<li>Apache Kafka is a distributed software system in the Big Data world. Thus, for such a system, there is a requirement to have copies of the stored data.
+<ul>
+<li>In Kafka, each broker contains some sort of data. But, what if the broker or the machine fails down? The data will be lost. <em>Precautionary</em>, Apache Kafka <strong>enables a feature of replication to secure data loss</strong> even when a broker fails down.</li>
+<li>To do so, a replication factor is created for the topics contained in any particular broker.
+<ul>
+<li>A replication factor is the number of copies of data over multiple brokers. The replication factor value should be greater than 1 always (PROD) (usually between 2 or 3, most commonly 3).
+<ul>
+<li>This helps to store a replica of the data in another broker from where the user can access it.</li>
+</ul>
+</li>
+</ul>
+</li>
+<li>It is obvious to have confusion when both the actual data and its replicas are present. The cluster may get confuse that which broker should serve the client request.</li>
+<li>To remove such confusion, the following task is done by Kafka:
+<ul>
+<li>It chooses one of the broker's partition as a leader, and the rest of them becomes its followers. At any time only one broker can be the partition leader.
+<ul>
+<li><strong>Producers</strong> can only send data to the broker that is leader of a partition.</li>
+</ul>
+</li>
+<li>The followers(brokers) will be allowed to synchronize the data. But, in the presence of a leader, none of the followers is allowed to serve the client's request. These replicas are known as ISR(in-sync-replica). So, Apache Kafka offers multiple <strong>ISR (in-sync-replica)</strong> for the data.</li>
+</ul>
+</li>
+<li>Therefore, only the leader is allowed to serve the client request. The leader handles all the read and writes operations of data for the partitions. The leader and its followers are determined by the zookeeper.</li>
+</ul>
+</li>
+<li><strong>Consumers: Replica fetching:</strong>
+<ul>
+<li>Since Kafka 2.4+, it's possible to configure consumers to read data from closest  replica.</li>
+<li>This may help to reduce the latency and also decrease network costs if using cloud (if broker replica is in same data center).</li>
+</ul>
+</li>
+</ul>
+</li>
+<li><strong><ins>References:</ins></strong>
+<ul>
+<li><a href="https://www.javatpoint.com/kafka-topic-replication">https://www.javatpoint.com/kafka-topic-replication</a></li>
+</ul>
+</li>
+</ul>
+<hr>
+<h2 id="6-xxxxxx">6. xxxxxx</h2>
+<ul>
+<li><strong><ins>Features</ins></strong>
+<ul>
+<li><strong>Replica fetching:</strong>
+<ul>
+<li>Since Kafka 2.4+, it's possible to configure consumers to read data from closest  replica.</li>
+<li>This may help to reduce the latency and also decrease network costs if using cloud (if broker replica is in same data center).</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+<blockquote>
+<p>Note: This is an <em><strong>important</strong></em> note.</p>
+</blockquote>
+<ul>
+<li><strong><ins>References:</ins></strong>
+<ul>
+<li><a href="https://www.javatpoint.com/kafka-topic-replication">https://www.javatpoint.com/kafka-topic-replication</a></li>
 </ul>
 </li>
 </ul>
