--- a/01.documentation/01-kafka-basics.html
+++ b/01.documentation/01-kafka-basics.html
@@ -197,7 +197,11 @@
 <li>Large ecosystem of open source tools: Leverage a vast array of community-driven tooling.</li>
 </ul>
 </li>
+<li><em><strong>Typical Kafka Ecosystem</strong></em></li>
 </ul>
+<center>
+<img src="file:////home/srvivek/wrkspace/kafka-for-beginners-2024/01.documentation/images/kafka-ecosystem.png" alt="kafka ecosystem" title="Typical kafka ecosystem" width="900" height="400"/>
+</center>
 </li>
 <li><strong>Trust &amp; Ease Of Use:</strong>
 <ul>
@@ -730,7 +734,7 @@
 <li><strong>Producers</strong> can only send data to the broker that is leader of a partition.</li>
 </ul>
 </li>
-<li>The followers(brokers) will be allowed to synchronize the data. But, in the presence of a leader, none of the followers is allowed to serve the client's request. These replicas are known as ISR(in-sync-replica). So, Apache Kafka offers multiple <strong>ISR (in-sync-replica)</strong> for the data.</li>
+<li>The followers(brokers) will be allowed to synchronize the data. But, in the presence of a leader, none of the followers is allowed to serve the clien t's request. These replicas are known as ISR(in-sync-replica). So, Apache Kafka offers multiple <strong>ISR (in-sync-replica)</strong> for the data.</li>
 </ul>
 </li>
 <li>Therefore, only the leader is allowed to serve the client request. The leader handles all the read and writes operations of data for the partitions. The leader and its followers are determined by the zookeeper.</li>
@@ -751,26 +755,72 @@
 </li>
 </ul>
 <hr>
-<h2 id="6-xxxxxx">6. xxxxxx</h2>
+<h2 id="6-kafka-zookeeper">6. Kafka: Zookeeper</h2>
 <ul>
-<li><strong><ins>Features</ins></strong>
+<li><strong><ins>About / Introduction</ins></strong>
 <ul>
-<li><strong>Replica fetching:</strong>
+<li>A ZooKeeper is used to store information about the Kafka cluster and details of the consumer clients. It manages brokers by maintaining a list of them.
 <ul>
-<li>Since Kafka 2.4+, it's possible to configure consumers to read data from closest  replica.</li>
-<li>This may help to reduce the latency and also decrease network costs if using cloud (if broker replica is in same data center).</li>
+<li>Also, a ZooKeeper is responsible for choosing a leader for the partitions.</li>
+<li>It doesn't store consumer offsets starting Kafka &gt; v0.10.</li>
+</ul>
+</li>
+<li>If any changes like a broker die, new topics, etc., occurs, the ZooKeeper sends notifications to Apache Kafka.</li>
+<li>For reliable ZooKeeper service, you should deploy ZooKeeper in a cluster(multi-server) known as an ensemble. As long as a majority of the ensemble are up, the service will be available.</li>
+<li>A ZooKeeper is designed to operate with an odd number of Kafka servers (1, 3, 5, 7 - Never more than 7 usually). Zookeeper has a leader server that handles all the writes, and rest of the servers are the followers who handle all the reads.
+<ul>
+<li>However, a user does not directly interact with the Zookeeper, but via brokers.</li>
+<li><strong>Kafka 2.x</strong> server can't run without a zookeeper server. It is <em><strong>mandatory to run the zookeeper server</strong></em>.</li>
+<li>Now from <strong>Kafka 3.x</strong> it can run without a <em><strong>Zookeeper(KIP-500)</strong></em> server, using <em><strong>Kafka Raft (KRaft)</strong></em> instead.
+<ul>
+<li>Kafka 3.3.1 (KIP-833) implements the Raft protocol (KRaft) in order to relace Zookeeper and is PROD ready.</li>
+</ul>
+</li>
+<li><strong>Kafka 4.x</strong> will be released only with KRaft (no Zookeeper).</li>
+<li>The reason of Zookeeper migration is it'sless secure than <em>Kafka</em>, and therefore Zookeeper ports should only be opened to allowed traffic from Kafka brokers and not from Kafka clients.</li>
+</ul>
+</li>
+<li><strong>KIP-500: (Replace ZooKeeper with a Self-Managed Metadata Quorum)</strong>
+<ul>
+<li>The controller nodes comprise a Raft quorum which manages the metadata log. This log contains information about each change to the cluster metadata. Everything that is currently stored in ZooKeeper, such as topics, partitions, ISRs, configurations, and so on, will be stored in this log.</li>
+<li>Using the Raft algorithm, the controller nodes will elect a leader from amongst themselves, without relying on any external system. The leader of the metadata log is called the <strong>active controller</strong>.
+<ul>
+<li>The active controller handles all RPCs made from the brokers. The follower controllers replicate the data which is written to the active controller, and serve as hot standbys if the active controller should fail. Because the controllers will now all track the latest state, controller failover will not require a lengthy reloading period where we transfer all the state to the new controller.</li>
+</ul>
+</li>
+<li>Just like ZooKeeper, Raft requires a majority of nodes to be running in order to continue running.
+<ul>
+<li>Therefore, a three-node controller cluster can survive one failure.</li>
+<li>A five-node controller cluster can survive two failures, and so on.</li>
+</ul>
+</li>
+<li>Periodically, the controllers will write out a snapshot of the metadata to disk. While this is conceptually similar to compaction, the code path will be a bit different because we can simply read the state from memory rather than re-reading the log from disk.</li>
+</ul>
+</li>
+</ul>
+</li>
+<li><strong><ins>Note:</ins></strong>
+<ul>
+<li><strong>With Kafka Client?</strong>
+<ul>
+<li>Overtime, the Kafka clients and CLI have been migrated to <em>leverage the brokers as a connection endpoint</em> instead of Zookeeper.</li>
+<li>Since <strong>Kafka 0.10</strong>, consumers store offset Kafka &amp; Zookeeper, and <em>must not connect to Zookeeper as it's deprecated.</em></li>
+<li>Since, <strong>Kafka 2.2</strong>, the <em><a href="http://kafka-topics.sh">kafka-topics.sh</a></em> references <em>Kafka Brokers</em> and not Zookeeper for topic management (creation, deletion, ... etc) and Zoookeeper CLI argument is deprecated.
+<ul>
+<li>All the APIs and Commands that were previously leveraging Zookeeper are migrated to use Kafaka instead, so that when clusters are migrated to be without Zookeeper, the change is invisible to the clients.</li>
+<li></li>
 </ul>
 </li>
 </ul>
 </li>
 </ul>
-<blockquote>
-<p>Note: This is an <em><strong>important</strong></em> note.</p>
-</blockquote>
-<ul>
+</li>
 <li><strong><ins>References:</ins></strong>
 <ul>
-<li><a href="https://www.javatpoint.com/kafka-topic-replication">https://www.javatpoint.com/kafka-topic-replication</a></li>
+<li><a href="https://cwiki.apache.org/confluence/display/KAFKA/KIP-500%3A+Replace+ZooKeeper+with+a+Self-Managed+Metadata+Quorum">https://cwiki.apache.org/confluence/display/KAFKA/KIP-500%3A+Replace+ZooKeeper+with+a+Self-Managed+Metadata+Quorum</a></li>
+<li><a href="https://zookeeper.apache.org/doc/r3.3.3/zookeeperAdmin.html#:~:text=Because%20Zookeeper%20requires%20a%20majority,do%20not%20constitute%20a%20majority.">https://zookeeper.apache.org/doc/r3.3.3/zookeeperAdmin.html#:~:text=Because%20Zookeeper%20requires%20a%20majority,do%20not%20constitute%20a%20majority.</a></li>
+<li><a href="https://www.udemy.com/course/apache-kafka/learn/lecture/11566886?start=0#content">Course Lecture</a></li>
+<li></li>
 </ul>
 </li>
 </ul>
