--- a/01.documentation/01-kafka-basics.html
+++ b/01.documentation/01-kafka-basics.html
@@ -200,7 +200,7 @@
 <li><em><strong>Typical Kafka Ecosystem</strong></em></li>
 </ul>
 <center>
-  <img src="file:////home/srvivek/wrkspace/kafka-for-beginners-2024/01.documentation/images/kafka-ecosystem.png" alt="kafka ecosystem" title="Typical kafka ecosystem" width="900" height="400"/>
+  <img src="./images/kafka-ecosystem.png" alt="kafka ecosystem" title="Typical kafka ecosystem" width="900" height="400"/>
 </center>
 </li>
 <li><strong>Trust &amp; Ease Of Use:</strong>
@@ -341,47 +341,11 @@
 </li>
 </ul>
 </li>
-<li>Typical message in kafka:<table style="border: 1px solid black">
-  <tr>
-    <td>
-      Key-Binary <br/>
-      (can be null)
-      </td>
-    <td>
-      Value-Binary <br/>
-      (can be null)
-    </td>
-  </tr>
-  <tr>
-    <td colspan="2">
-      Compression type <br/> 
-      (none, gzip, snappy, lz4, zstd)
-    </td>
-  </tr>
-  <tr>
-    <td colspan="2">
-      Headers (Optional) <br/> 
-      <p> 
-      |-----------------| <br/>
-      | Key &nbsp;&nbsp;| value &nbsp;&nbsp; |<br/>
-      |-----------------| <br/>
-      | Key &nbsp;&nbsp;| value &nbsp;&nbsp; |<br/>
-      |-----------------| <br/>
-      </p>
-    </td>
-  </tr>
-  <tr>
-    <td colspan="2">
-      Partition + Offset
-    </td>
-  </tr>
-  <tr>
-    <td colspan="2">
-      Timestamp (System or user set)
-    </td>
-  </tr>
-</table>
-</li>
+<li><strong>Kafka Message Structure:</strong>
+<br/>
+<left>
+<img src="./images/kafka-message-structure.png" alt="kafka message structure" title="Kafka Message Structure / Components" width="600" height="250"/>
+</left></li>
 </ul>
 </li>
 <li><strong>Acknowledgment:</strong>
